--- a/src/styles/globals/typography.scss
+++ b/src/styles/globals/typography.scss
@@ -6,4 +6,12 @@
 body {
   font-family: var(--ff-secondary);
   font-weight: var(--fw-regular);
+  color: var(--clr-neutral-100);
+}
+
+h1,
+h2,
+h3 {
+  font-family: var(--ff-primary);
+  font-weight: var(--fw-bold);
 }
