--- a/src/UI/Button/index.module.scss
+++ b/src/UI/Button/index.module.scss
@@ -13,7 +13,7 @@
   transition: color 250ms ease-in-out, background-color 250ms ease-in-out;
 
   &:focus {
-    outline: none;
+    outline: 2px solid var(--clr-neutral-100);
   }
 
   @include media-hover {
