--- a/src/UI/Button/index.module.scss
+++ b/src/UI/Button/index.module.scss
@@ -12,6 +12,12 @@
 
   transition: color 250ms ease-in-out, background-color 250ms ease-in-out;
 
+  &:focus {
+    outline: none;
+    background-color: var(--clr-primary);
+    color: var(--clr-neutral-700);
+  }
+
   @include media-hover {
     &:hover {
       background-color: var(--clr-primary);
