--- a/src/components/Hero/index.module.scss
+++ b/src/components/Hero/index.module.scss
@@ -1,4 +1,4 @@
-@use "../src/styles/utils" as *;
+@use "../../styles/utils" as *;
 
 .hero {
   min-height: 100vh;
@@ -6,16 +6,16 @@
   display: flex;
   align-items: center;
 
-  background-image: url("../public/backgrounds/bg-hero-mobile.svg");
+  background-image: url("../../../public/backgrounds/bg-hero-mobile.svg");
   background-size: cover;
   background-repeat: no-repeat;
 
   @include breakpoint-up(large) {
-    background-image: url("../public/backgrounds/bg-hero-desktop.svg");
+    background-image: url("../../../public/backgrounds/bg-hero-desktop.svg");
   }
 
   .container {
-    max-width: 64rem;
+    max-width: 70rem;
     @include margin-x-auto;
 
     display: flex;
