--- a/src/components/Projects/index.module.scss
+++ b/src/components/Projects/index.module.scss
@@ -1,14 +1,19 @@
 @use "../../styles/utils" as *;
 
 .projects {
-  min-height: 100vh;
+  padding: 1.5rem;
+  margin-top: 5rem;
+
+  @include breakpoint-up(large) {
+    margin-top: 10rem;
+  }
 
   .container {
-    max-width: 70rem;
+    max-width: 75rem;
     @include margin-x-auto;
 
-    display: grid;
-    grid-template-rows: repeat(3, 1fr);
+    display: flex;
+    flex-direction: column;
     gap: 2rem;
   }
 }
