--- a/src/components/Hero/index.module.scss
+++ b/src/components/Hero/index.module.scss
@@ -15,14 +15,14 @@
     max-width: 75rem;
     @include margin-x-auto;
 
-    margin-top: 5rem;
+    margin-top: 5.5rem;
 
     display: flex;
     flex-direction: column;
     gap: 3rem;
 
     @include breakpoint-up(large) {
-      margin-top: 10rem;
+      margin-top: 11rem;
 
       gap: 6rem;
     }
@@ -54,6 +54,7 @@
   }
 
   h1 {
+    font-size: 2.25rem;
     color: var(--clr-neutral-100);
     line-height: 1.15;
 
