--- a/src/components/Projects/Project/index.module.scss
+++ b/src/components/Projects/Project/index.module.scss
@@ -1,6 +1,32 @@
 .project {
   background-color: var(--clr-neutral-400);
   padding: 1.5rem;
+  border-radius: 0.25rem;
+
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 2fr 3fr;
+  align-items: center;
+  gap: 2rem;
+
+  h2 {
+    margin-bottom: 0.375rem;
+  }
+
+  .buttons {
+    margin-bottom: 1rem;
+    display: flex;
+    gap: 0.375rem;
+
+    button {
+      font-size: 0.875rem;
+      padding: 0.12625rem 0.5rem;
+    }
+  }
+
+  .icons {
+    margin-top: 2rem;
+    cursor: pointer;
+    display: flex;
+    gap: 0.875rem;
+  }
 }
