--- a/src/components/Hero/index.module.scss
+++ b/src/components/Hero/index.module.scss
@@ -1,7 +1,7 @@
 @use "../../styles/utils" as *;
 
 .hero {
-  padding: 1.5rem;
+  padding: 2.5rem 1.5rem;
 
   background-image: url("../../../public/backgrounds/bg-hero-mobile.svg");
   background-size: cover;
@@ -9,20 +9,22 @@
 
   @include breakpoint-up(large) {
     background-image: url("../../../public/backgrounds/bg-hero-desktop.svg");
+    padding-left: 5rem;
+    padding-right: 5rem;
   }
 
   .container {
-    max-width: 75rem;
+    max-width: 80rem;
     @include margin-x-auto;
 
-    margin-top: 5.5rem;
+    margin-top: 5rem;
 
     display: flex;
     flex-direction: column;
     gap: 3rem;
 
     @include breakpoint-up(large) {
-      margin-top: 11rem;
+      margin-top: 10rem;
 
       gap: 6rem;
     }
