--- a/src/components/Hero/index.module.scss
+++ b/src/components/Hero/index.module.scss
@@ -56,9 +56,13 @@
   }
 
   h1 {
-    font-size: 2.25rem;
-    color: var(--clr-neutral-100);
+    font-size: 2.5rem;
     line-height: 1.15;
+    color: var(--clr-neutral-100);
+
+    @include breakpoint-down(medium) {
+      margin-bottom: 0.75rem;
+    }
 
     @include breakpoint-up(large) {
       font-size: 4rem;
@@ -66,7 +70,12 @@
   }
 
   h2 {
+    font-size: 1.25rem;
     opacity: 0.75;
+
+    @include breakpoint-up(large) {
+      font-size: 1.5rem;
+    }
   }
 
   .icons {
