--- a/src/components/Hero/index.module.scss
+++ b/src/components/Hero/index.module.scss
@@ -80,6 +80,7 @@
 
   .icons {
     margin-top: 1rem;
+    font-size: 1.5rem;
     display: flex;
     gap: 1rem;
 
@@ -88,15 +89,17 @@
     }
 
     a {
+      cursor: pointer;
       display: flex;
 
       &:focus {
-        outline: 0.125rem solid var(--clr-primary);
+        color: var(--clr-primary);
+        outline: none;
       }
-    }
 
-    img {
-      cursor: pointer;
+      &:hover {
+        color: var(--clr-primary);
+      }
     }
   }
 
@@ -112,6 +115,12 @@
     @include breakpoint-up(large) {
       flex-direction: row;
       justify-content: center;
+    }
+
+    .button-flex {
+      display: flex;
+      align-items: center;
+      gap: 1rem;
     }
   }
 }
