--- a/src/styles/globals/typography.scss
+++ b/src/styles/globals/typography.scss
@@ -16,3 +16,13 @@ button {
   font-family: var(--ff-primary);
   font-weight: var(--fw-bold);
 }
+
+a {
+  text-decoration: none;
+}
+
+a,
+a:visited,
+a:active {
+  color: inherit;
+}
