--- a/src/components/Hero/index.module.scss
+++ b/src/components/Hero/index.module.scss
@@ -108,6 +108,12 @@
     flex-direction: column;
     gap: 1rem;
 
+    a {
+      font-family: var(--ff-primary);
+      font-weight: var(--fw-bold);
+      color: var(--clr-primary);
+    }
+
     @include breakpoint-down(medium) {
       @include margin-x-auto;
     }
