--- a/src/components/Projects/index.module.scss
+++ b/src/components/Projects/index.module.scss
@@ -2,10 +2,12 @@
 
 .projects {
   padding: 1.5rem;
-  margin-top: 5rem;
+  margin-top: 2rem;
+  padding-top: 4rem;
 
   @include breakpoint-up(large) {
-    margin-top: 10rem;
+    margin-top: 4rem;
+    padding-top: 4rem;
   }
 
   .container {
