--- a/src/components/Projects/Project/index.module.scss
+++ b/src/components/Projects/Project/index.module.scss
@@ -1,7 +1,7 @@
 @use "../../../styles/utils" as *;
 
 .project {
-  background-color: var(--clr-neutral-400);
+  background-color: darken(#44475a, 5%);
   padding: 1.5rem;
   border-radius: 0.25rem;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
