--- a/src/components/Projects/Project/index.module.scss
+++ b/src/components/Projects/Project/index.module.scss
@@ -22,6 +22,11 @@
 
   h2 {
     margin-bottom: 0.375rem;
+    font-size: 1.4375rem;
+
+    @include breakpoint-up(large) {
+      font-size: 1.75rem;
+    }
   }
 
   p {
