--- a/src/components/Footer/index.module.scss
+++ b/src/components/Footer/index.module.scss
@@ -35,6 +35,11 @@
     a {
       opacity: 0.75;
       font-weight: var(--fw-regular);
+
+      &:focus {
+        color: var(--clr-primary);
+        outline: none;
+      }
     }
   }
 }
