--- a/src/styles/globals/typography.scss
+++ b/src/styles/globals/typography.scss
@@ -27,6 +27,13 @@ p {
   }
 }
 
+@include media-hover {
+  button:focus,
+  a:focus {
+    outline: none;
+  }
+}
+
 a {
   text-decoration: none;
 }
