--- a/src/UI/Button/index.module.scss
+++ b/src/UI/Button/index.module.scss
@@ -2,7 +2,7 @@
 
 .button {
   color: var(--clr-primary);
-  font-size: 1.25rem;
+  font-size: 1.0625rem;
 
   background-color: transparent;
   padding: 0.625rem 2rem;
@@ -12,6 +12,10 @@
   box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
 
   transition: color 250ms ease-in-out, background-color 250ms ease-in-out;
+
+  @include breakpoint-up(large) {
+    font-size: 1.25rem;
+  }
 
   @include media-hover {
     &:focus,
