--- a/src/components/Projects/Project/index.module.scss
+++ b/src/components/Projects/Project/index.module.scss
@@ -39,7 +39,7 @@
     flex-wrap: wrap;
     gap: 0.375rem;
 
-    button {
+    span {
       font-size: 0.75rem;
       padding: 0.12625rem 0.5rem;
       cursor: default;
